--- a/index.html
+++ b/index.html
@@ -2,12 +2,44 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>My Bibliography</title>
+  <title>Publications</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Bibliography</h1>
-  <div id="bibliography"></div>
+  <h1>Publications</h1>
+  <div id="publications"></div>
+
+  <h2>Statistic and Computer Science</h2>
+  <div id="statcs"></div>
+
+  <h2>Physics</h2>
+  <div id="physics"></div>
+
+  <h2>Psychology and Neuroscience</h2>
+  <div id="psychneuro"></div>
+
+  <h2>Genomics</h2>
+  <div id="genomics"></div>
+
+  <h2>Social Sciences</h2>
+  <div id="socialsciences"></div>
+
+  <h2>Medicine</h2>
+  <div id="medicine"></div>
+
+  <h2>Logic</h2>
+  <div id="logic"></div>
+
+  <h2>History of Science</h2>
+  <div id="historyofscience"></div>
+
+  <h2>Popular Books, Essays and Reviews</h2>
+  <div id="popular"></div>
+
+  <h2>Philosophical Publications</h2>
+  <div id="philosophy"></div>
+
+  
 
   <script src="script.js"></script>
 </body>
