--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
   <h2>Philosophical Publications</h2>
   <div id="philosophy"></div>
 
-  
+  <h2>Miscellaneous</h2>
+  <div id="miscellaneous"></div>
+
 
   <script src="script.js"></script>
 </body>
