--- a/index.html
+++ b/index.html
@@ -7,34 +7,36 @@
 </head>
 <body>
   
-  <h1>Statistic and Computer Science</h1>
+  <h1>Clark Glymour Publications</h1>
+
+  <h2>Statistic and Computer Science</h2>
   <div id="statcs"></div>
 
-  <h1>Physics</h1>
+  <h2>Physics</h2>
   <div id="physics"></div>
 
-  <h1>Psychology and Neuroscience</h1>
+  <h2>Psychology and Neuroscience</h2>
   <div id="psychneuro"></div>
 
-  <h1>Genomics</h1>
+  <h2>Genomics</h2>
   <div id="genomics"></div>
 
-  <h1>Social Sciences</h1>
+  <h2>Social Sciences</h2>
   <div id="socialsciences"></div>
 
-  <h1>Medicine</h1>
+  <h2>Medicine</h2>
   <div id="medicine"></div>
 
-  <h1>Logic</h1>
+  <h2>Logic</h2>
   <div id="logic"></div>
 
-  <h1>History of Science</h1>
+  <h2>History of Science</h2>
   <div id="historyofscience"></div>
 
-  <h1>Popular Books, Essays and Reviews</h1>
+  <h2>Popular Books, Essays and Reviews</h2>
   <div id="popular"></div>
 
-  <h1>Philosophical Publications</h1>
+  <h2>Philosophical Publications</h2>
   <div id="philosophy"></div>
 
 
