--- a/index.html
+++ b/index.html
@@ -9,36 +9,58 @@
   
   <h1>Clark Glymour Publications</h1>
 
-  <h2>Statistic and Computer Science</h2>
-  <div id="statcs"></div>
+  <p style="font-style: italic; color: #555;">
+    Click a section title to expand.
+  </p>
 
-  <h2>Physics</h2>
-  <div id="physics"></div>
+  <details>
+    <summary>Statistics and Computer Science</summary>
+    <div id="statcs"></div>
+  </details>
 
-  <h2>Psychology and Neuroscience</h2>
-  <div id="psychneuro"></div>
+  <details>
+    <summary>Physics</summary>
+    <div id="physics"></div>
+  </details>
 
-  <h2>Genomics</h2>
-  <div id="genomics"></div>
+  <details>
+    <summary>Psychology and Neuroscience</summary>
+    <div id="psychneuro"></div>
+  </details>
+  <details>
+    <summary>Genomics</summary>
+    <div id="genomics"></div>
+  </details>
 
-  <h2>Social Sciences</h2>
-  <div id="socialsciences"></div>
+  <details>
+    <summary>Social Sciences</summary>
+    <div id="socialsciences"></div>
+  </details>
 
-  <h2>Medicine</h2>
-  <div id="medicine"></div>
+  <details>
+    <summary>Medicine</summary>
+    <div id="medicine"></div>
+  </details>
 
-  <h2>Logic</h2>
-  <div id="logic"></div>
+  <details>
+    <summary>Logic</summary>
+    <div id="logic"></div>
+  </details>
 
-  <h2>History of Science</h2>
-  <div id="historyofscience"></div>
+  <details>
+    <summary>History of Science</summary>
+    <div id="historyofscience"></div>
+  </details>
 
-  <h2>Popular Books, Essays and Reviews</h2>
-  <div id="popular"></div>
+  <details>
+    <summary>Popular Books, Essays and Reviews</summary>
+    <div id="popular"></div>
+  </details>
 
-  <h2>Philosophical Publications</h2>
-  <div id="philosophy"></div>
-
+  <details>
+    <summary>Philosophical Publications</summary>
+    <div id="philosophy"></div>
+  </details>
 
   <script src="script.js"></script>
 </body>
