--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
   
-  <h1>Clark Glymour Publications</h1>
+  <header class="site-header">
+    <img src="clark-glymour.webp" alt="Clark Glymour" class="logo">
+    <h1>Clark Glymour Publications</h1>
+  </header>
 
   <p style="font-style: italic; color: #555;">
     Click a section title to expand.
