--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Clark Glymour Publications</h1>
   </header>
 
-  <p style="font-style: italic; color: #555;">
+  <p style="color: #555;">
     Click a section title to expand.
   </p>
 
