--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   
   <header class="site-header">
-    <img src="clark-glymour.webp" alt="Clark Glymour" class="logo">
+    <img src="clark-glymour.webp" class="logo">
     <h1>Clark Glymour Publications</h1>
   </header>
 
