--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
   
   <header class="site-header">
-    <img src="clark-glymour.webp" class="logo">
+    <img src="clark-glymour.png" class="logo">
     <h1>Clark Glymour Publications</h1>
   </header>
 
   <p style="color: #555;">
-    Click a section title to expand.
+    Click a section title to expand
   </p>
 
   <details>
