--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <h1>Clark Glymour Publications</h1>
   </header>
 
+  <div class="search-container">
+    <input type="text" id="searchInput" placeholder="Search" onkeyup="searchPubs()">
+  </div>
+
   <p style="color: #555;">
     Click a section title to expand
   </p>
