--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
 <body>
   
   <header class="site-header">
-    <img src="clark-glymour.png" alt="" class="logo">
+    <img src="clark-glymour.png" alt="xxx" class="logo">
     <h1>Clark Glymour Publications</h1>
   </header>
 
-  <div class="search-container">
-    <input type="text" id="searchInput" placeholder="Search" onkeyup="searchPubs()">
-  </div>
 
   <p style="color: #555;">
     Click a section title to expand
