--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 
   <p style="color: #555;">
-    Click a section title to expand
+    Click a section title to expand. Use ctrl+F to search.
   </p>
 
   <details>
